--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "bacon/bacon-qr-code": "^3.0",
         "endroid/qr-code": "^5.0",
         "laravel/framework": "^11.31",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "mike42/escpos-php": "^2.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
